<resources>
    <string name="app_name">AgriSmart Pro</string>
    <string name="crop_info">Crop Info</string>
    <string name="disease_diagnosis">Disease Diagnosis</string>
    <string name="forum">Community</string>
    <string name="market_prices">Market Prices</string>
    <string name="notifications">Notifications</string>
    <string name="weather">Weather</string>
    <string name="search_crops_diseases_etc">Search crops, diseases, etc.</string>
    <string name="sunny">Sunny</string>
    <string name="_28_c">28°C</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="show_forecast">Show Forecast</string>
    <string name="wind_speed_10_km_h">Wind Speed: 10 km/h</string>
    <string name="humidity_60">Humidity: 60%</string>
    <string name="cloudy">Cloudy</string>
    <string name="_27_c">27°C</string>
    <string name="weather_activity_title">Weather Forecast</string>
    <string name="back_button_description">Go back</string>
    <string name="crop_info_title">Crop Information</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="back_button">Back</string>
    <string name="detailed_info_placeholder">\nWhat is Lorem Ipsum?\n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n\nWhy do we use it?\n\nIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n</string>
    <string name="additional_info">Bio:</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="app_tagline">Empowering Farmers, Enriching Harvests</string>
    <string name="diagnosis_result">Result</string>
    <string name="diagnose">Diagnose</string>
    <string name="enter_symptoms">List symptoms</string>

    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_language">Select Language</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
    </string-array>
</resources>