<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.myapplicationsem2.ProfileActivity.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/white"
        tools:context=".ProfileActivity">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/man512"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"/>

        <!-- User Name -->
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.name}"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- User Email -->
        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.email}"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Additional Information -->
        <TextView
            android:id="@+id/additionalInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_info"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/userEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/additionalInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner_background"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@{user.additionalInfo}"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/additionalInfoTitle" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/additionalInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

